--- a/graphql-auth/tsconfig.json
+++ b/graphql-auth/tsconfig.json
@@ -3,8 +3,7 @@
     "esModuleInterop": true,
     "outDir": "dist",
     "rootDir": "src",
-    "lib": ["esnext"],
-    "strict": true
+    "lib": ["ESNext"],
   },
   "include": ["src/**/*"]
 }
