--- a/graphql-auth/package.json
+++ b/graphql-auth/package.json
@@ -5,7 +5,7 @@
     "dev": "ts-node-dev --no-notify --respawn --transpile-only src/server",
     "start": "node dist/server",
     "clean": "rm -rf dist",
-    "build": "npm -s run clean && npm -s run generate && tsc",
+    "build": "rm -rf dist && tsc",
     "generate": "npm -s run generate:prisma && npm -s run generate:nexus",
     "generate:prisma": "prisma generate",
     "generate:nexus": "ts-node --transpile-only src/schema"
@@ -29,7 +29,7 @@
   "devDependencies": {
     "@types/bcryptjs": "2.4.2",
     "@types/jsonwebtoken": "9.0.2",
-    "@types/node": "18.17.1",
+    "@types/node": "20.4.5",
     "prisma": "5.0.0",
     "ts-node": "10.9.1",
     "ts-node-dev": "2.0.0",
