--- a/graphql-auth/Dockerfile
+++ b/graphql-auth/Dockerfile
@@ -1,10 +1,10 @@
 
-FROM node:latest as builder
+FROM node:20 as builder
 
-WORKDIR /app
+WORKDIR /src
 
 
-COPY package.json pnpm-lock.yaml ./
+COPY package.json  ./
 
 
 RUN npm install -g pnpm
@@ -18,16 +18,9 @@ COPY . .
 
 RUN pnpm build
 
-FROM node:latest
-
-WORKDIR /app
-
-COPY --from=builder /app/dist ./dist
-COPY --from=builder /app/package.json /app/pnpm-lock.yaml ./
 
 RUN npm install -g pnpm
 RUN pnpm install  --prod
 
-ENV NODE_ENV=production
 
-CMD ["node", "dist/index.js"]
+CMD ["node"]
